# Ink-Town

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  MEMORY.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: windows-editor-build.yml
apps/game-client/: Cargo.toml
apps/game-client/src/: camera.rs  config.rs  main.rs  world.rs
apps/game-client/src/llm_gateway/: provider.rs
crates/sim-core/: Cargo.toml
crates/sim-core/src/: error.rs  observation.rs  types.rs
crates/world-core/: Cargo.toml
crates/world-core/src/: error.rs
data/registry/: attributes.json  materials.json  pixel.schema.json  registry.json  value_sets.json
data/world/: world.json
data/world/chunks/: c_0_0.json
editor/: .env.example  package-lock.json  package.json  tsconfig.json
editor/src/: main.tsx  styles.css
editor/src-tauri/: Cargo.toml  tauri.conf.json
editor/src-tauri/icons/: icon.icns
editor/src-tauri/src/: lib.rs  main.rs
editor/src/editor/: EditorApp.tsx
editor/src/editor/components/: EditorSidebar.tsx  EditorStatusBar.tsx
editor/src/editor/components/sections/: BrushSection.tsx  MapStatusSection.tsx  RegistryEditorSection.tsx  ViewSection.tsx
editor/src/editor/types/: interaction.ts  panel.ts
editor/src/editor/utils/: propertyHelpers.ts
editor/src/lib/: color.ts
editor/src/renderer/: canvasRenderer.ts
editor/src/updater/: config.ts  githubReleaseUpdater.ts  types.ts
game/: Cargo.toml
game/src/: config.rs  sim_runtime.rs  ui.rs
game/src/llm_gateway/: mod.rs  types.rs
shared/sim-core/: Cargo.toml
shared/sim-core/src/: lib.rs  schema.rs  sim.rs
shared/world-core/: Cargo.toml
shared/world-core/src/: lib.rs  registry.rs  runtime.rs  types.rs
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/editor/: EditorApp.tsx  constants.ts
src/editor/components/: CanvasHud.tsx  EditorSidebar.tsx  PanelSection.tsx  SidebarHeader.tsx
src/editor/components/sections/: BrushPropertiesSection.tsx  InspectSection.tsx  UpdateSection.tsx
src/editor/hooks/: useCanvasInteraction.ts  useEditorShortcuts.ts
src/lib/: tauriApi.ts  worldMath.test.ts  worldMath.ts
src/renderer/: canvasRenderer.ts  types.ts
src/updater/: config.ts
