[workspace]
members = [
  "src-tauri",
  "crates/world-core",
  "crates/sim-core",
  "apps/game-client"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Ink Town"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
jsonschema = "0.18"
tokio = { version = "1.41", features = ["rt-multi-thread", "macros", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
parking_lot = "0.12"
rand = "0.8"

[profile.release]
codegen-units = 1
lto = "thin"
