[package]
name = "ink_town"
version = "0.1.0"
description = "Ink Town world core"
authors = ["Ink Town"]
edition = "2021"

[package.metadata.tauri]
enabled = true

[lib]
name = "ink_town_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
desktop = ["dep:tauri", "dep:tauri-build", "dep:tauri-plugin-dialog"]

[build-dependencies]
tauri-build = { version = "2.0.2", optional = true, features = [] }

[dependencies]
tauri = { version = "2.1.1", optional = true, features = [] }
tauri-plugin-dialog = { version = "2.0.1", optional = true }
world-core = { path = "../crates/world-core" }
