[package]
name = "ink-town-game"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
  "animation",
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_gizmos",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "bevy_winit",
  "default_font",
  "multi_threaded",
  "png",
  "x11",
  "wayland"
] }
bevy_egui = "0.29"
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true

world-core = { path = "../../crates/world-core" }
sim-core = { path = "../../crates/sim-core" }
